# clib-package-manager

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  TODO  cclm  compile.sh  compile_commands.json  cpm  cpm.cpp  info.yaml  library_export.txt
.ignore/: core.cpp  core.h
docs/: index.html  license.html  script.js  style.css
include/: appf.h  argvf.h  argvparser.h  argvparserf.h  cli.h  clif.h  configf.h  constants.h  core.h  parsers.h  templates.h  toolsf.h  transactionf.h  utils.h  utilsf.h  yamlf.h  yamlparser.h  yamlparserf.h
releases/linux/: install.sh  uninstall.sh
releases/linux/_src/: clibx
setup/_src/: clib  clibx
setup/linux/: install.sh
setup/linux/_src/: clibx
sources/: appf.cpp  argvparser.cpp  argvparserf.cpp  cli.cpp  clif.cpp  configf.cpp  core.cpp  installer.cxx  main.cpp  parsers.cpp  toolsf.cpp  transactionf.cpp  utils.cpp  utilsf.cpp  yamlf.cpp  yamlparser.cpp  yamlparserf.cpp
src/: appf.cpp  argvf.cpp  main.cpp  toolsf.cpp  transactionf.cpp  yamlf.cpp
src/core/: core.cpp  include.h
src/templates/: include.h  templates.cpp
